# toytk

./: CMakeLists.txt  LICENSE  README.md
demo/: CMakeLists.txt
demo/src/: main.cxx
libtoytk/: CMakeLists.txt
libtoytk/include/toytk/: common.hxx  core.hxx  event.hxx  font.hxx  prelude.hxx
libtoytk/include/toytk/detail/: buffer.hxx  display.hxx  low-event.hxx  output.hxx  seat.hxx
libtoytk/include/toytk/widget/: button.hxx  frame.hxx  label.hxx  padding-box.hxx  vertical-box.hxx
libtoytk/src/: application.cxx  event.cxx  font.cxx  widget.cxx  window.cxx
libtoytk/src/detail/: buffer.cxx  display.cxx  output.cxx  seat.cxx
libtoytk/src/widget/: button.cxx  frame.cxx  label.cxx  padding-box.cxx  vertical-box.cxx
